--- a/examples/notebooks/run_policy.ipynb
+++ b/examples/notebooks/run_policy.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "000a4ff3",
    "metadata": {},
    "outputs": [],
@@ -67,6 +67,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "2abd14df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ckpt_path = \"/tmp/tmp_trained_models/test/20250216152146/models/model_epoch_2.pth\""
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "2c2c25c6",
    "metadata": {},
@@ -77,10 +87,320 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "bf84aed6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "============= Loaded Config =============\n",
+      "{\n",
+      "    \"algo_name\": \"bc\",\n",
+      "    \"experiment\": {\n",
+      "        \"name\": \"test\",\n",
+      "        \"validate\": false,\n",
+      "        \"logging\": {\n",
+      "            \"terminal_output_to_txt\": true,\n",
+      "            \"log_tb\": true,\n",
+      "            \"log_wandb\": false,\n",
+      "            \"wandb_proj_name\": \"debug\"\n",
+      "        },\n",
+      "        \"save\": {\n",
+      "            \"enabled\": true,\n",
+      "            \"every_n_seconds\": null,\n",
+      "            \"every_n_epochs\": 1,\n",
+      "            \"epochs\": [],\n",
+      "            \"on_best_validation\": false,\n",
+      "            \"on_best_rollout_return\": false,\n",
+      "            \"on_best_rollout_success_rate\": true\n",
+      "        },\n",
+      "        \"epoch_every_n_steps\": 3,\n",
+      "        \"validation_epoch_every_n_steps\": 3,\n",
+      "        \"env\": null,\n",
+      "        \"additional_envs\": null,\n",
+      "        \"render\": false,\n",
+      "        \"render_video\": true,\n",
+      "        \"keep_all_videos\": false,\n",
+      "        \"video_skip\": 5,\n",
+      "        \"rollout\": {\n",
+      "            \"enabled\": false,\n",
+      "            \"n\": 2,\n",
+      "            \"horizon\": 10,\n",
+      "            \"rate\": 1,\n",
+      "            \"warmstart\": 0,\n",
+      "            \"terminate_on_success\": true\n",
+      "        }\n",
+      "    },\n",
+      "    \"train\": {\n",
+      "        \"data\": \"/data/logs/converted_standard/standard_demo.hdf5\",\n",
+      "        \"output_dir\": \"/tmp/tmp_trained_models\",\n",
+      "        \"num_data_workers\": 0,\n",
+      "        \"hdf5_cache_mode\": \"all\",\n",
+      "        \"hdf5_use_swmr\": true,\n",
+      "        \"hdf5_load_next_obs\": true,\n",
+      "        \"hdf5_normalize_obs\": false,\n",
+      "        \"hdf5_filter_key\": null,\n",
+      "        \"hdf5_validation_filter_key\": null,\n",
+      "        \"seq_length\": 1,\n",
+      "        \"pad_seq_length\": true,\n",
+      "        \"frame_stack\": 1,\n",
+      "        \"pad_frame_stack\": true,\n",
+      "        \"dataset_keys\": [\n",
+      "            \"actions\",\n",
+      "            \"rewards\",\n",
+      "            \"dones\"\n",
+      "        ],\n",
+      "        \"goal_mode\": \"last\",\n",
+      "        \"cuda\": true,\n",
+      "        \"batch_size\": 2,\n",
+      "        \"num_epochs\": 2,\n",
+      "        \"seed\": 1\n",
+      "    },\n",
+      "    \"algo\": {\n",
+      "        \"optim_params\": {\n",
+      "            \"policy\": {\n",
+      "                \"optimizer_type\": \"adam\",\n",
+      "                \"learning_rate\": {\n",
+      "                    \"initial\": 0.0001,\n",
+      "                    \"decay_factor\": 0.1,\n",
+      "                    \"epoch_schedule\": [],\n",
+      "                    \"scheduler_type\": \"multistep\"\n",
+      "                },\n",
+      "                \"regularization\": {\n",
+      "                    \"L2\": 0.0\n",
+      "                }\n",
+      "            }\n",
+      "        },\n",
+      "        \"loss\": {\n",
+      "            \"l2_weight\": 1.0,\n",
+      "            \"l1_weight\": 0.0,\n",
+      "            \"cos_weight\": 0.0\n",
+      "        },\n",
+      "        \"actor_layer_dims\": [\n",
+      "            1024,\n",
+      "            1024\n",
+      "        ],\n",
+      "        \"gaussian\": {\n",
+      "            \"enabled\": false,\n",
+      "            \"fixed_std\": false,\n",
+      "            \"init_std\": 0.1,\n",
+      "            \"min_std\": 0.01,\n",
+      "            \"std_activation\": \"softplus\",\n",
+      "            \"low_noise_eval\": true\n",
+      "        },\n",
+      "        \"gmm\": {\n",
+      "            \"enabled\": false,\n",
+      "            \"num_modes\": 5,\n",
+      "            \"min_std\": 0.0001,\n",
+      "            \"std_activation\": \"softplus\",\n",
+      "            \"low_noise_eval\": true\n",
+      "        },\n",
+      "        \"vae\": {\n",
+      "            \"enabled\": false,\n",
+      "            \"latent_dim\": 14,\n",
+      "            \"latent_clip\": null,\n",
+      "            \"kl_weight\": 1.0,\n",
+      "            \"decoder\": {\n",
+      "                \"is_conditioned\": true,\n",
+      "                \"reconstruction_sum_across_elements\": false\n",
+      "            },\n",
+      "            \"prior\": {\n",
+      "                \"learn\": false,\n",
+      "                \"is_conditioned\": false,\n",
+      "                \"use_gmm\": false,\n",
+      "                \"gmm_num_modes\": 10,\n",
+      "                \"gmm_learn_weights\": false,\n",
+      "                \"use_categorical\": false,\n",
+      "                \"categorical_dim\": 10,\n",
+      "                \"categorical_gumbel_softmax_hard\": false,\n",
+      "                \"categorical_init_temp\": 1.0,\n",
+      "                \"categorical_temp_anneal_step\": 0.001,\n",
+      "                \"categorical_min_temp\": 0.3\n",
+      "            },\n",
+      "            \"encoder_layer_dims\": [\n",
+      "                300,\n",
+      "                400\n",
+      "            ],\n",
+      "            \"decoder_layer_dims\": [\n",
+      "                300,\n",
+      "                400\n",
+      "            ],\n",
+      "            \"prior_layer_dims\": [\n",
+      "                300,\n",
+      "                400\n",
+      "            ]\n",
+      "        },\n",
+      "        \"rnn\": {\n",
+      "            \"enabled\": false,\n",
+      "            \"horizon\": 10,\n",
+      "            \"hidden_dim\": 400,\n",
+      "            \"rnn_type\": \"LSTM\",\n",
+      "            \"num_layers\": 2,\n",
+      "            \"open_loop\": false,\n",
+      "            \"kwargs\": {\n",
+      "                \"bidirectional\": false\n",
+      "            }\n",
+      "        },\n",
+      "        \"transformer\": {\n",
+      "            \"enabled\": false,\n",
+      "            \"context_length\": 10,\n",
+      "            \"embed_dim\": 512,\n",
+      "            \"num_layers\": 6,\n",
+      "            \"num_heads\": 8,\n",
+      "            \"emb_dropout\": 0.1,\n",
+      "            \"attn_dropout\": 0.1,\n",
+      "            \"block_output_dropout\": 0.1,\n",
+      "            \"sinusoidal_embedding\": false,\n",
+      "            \"activation\": \"gelu\",\n",
+      "            \"supervise_all_steps\": false,\n",
+      "            \"nn_parameter_for_timesteps\": true\n",
+      "        }\n",
+      "    },\n",
+      "    \"observation\": {\n",
+      "        \"modalities\": {\n",
+      "            \"obs\": {\n",
+      "                \"low_dim\": [],\n",
+      "                \"rgb\": [\n",
+      "                    \"observation\"\n",
+      "                ],\n",
+      "                \"depth\": [],\n",
+      "                \"scan\": []\n",
+      "            },\n",
+      "            \"goal\": {\n",
+      "                \"low_dim\": [],\n",
+      "                \"rgb\": [\n",
+      "                    \"observation\"\n",
+      "                ],\n",
+      "                \"depth\": [],\n",
+      "                \"scan\": []\n",
+      "            }\n",
+      "        },\n",
+      "        \"encoder\": {\n",
+      "            \"low_dim\": {\n",
+      "                \"core_class\": null,\n",
+      "                \"core_kwargs\": {},\n",
+      "                \"obs_randomizer_class\": null,\n",
+      "                \"obs_randomizer_kwargs\": {}\n",
+      "            },\n",
+      "            \"rgb\": {\n",
+      "                \"core_class\": \"VisualCore\",\n",
+      "                \"core_kwargs\": {},\n",
+      "                \"obs_randomizer_class\": null,\n",
+      "                \"obs_randomizer_kwargs\": {}\n",
+      "            },\n",
+      "            \"depth\": {\n",
+      "                \"core_class\": \"VisualCore\",\n",
+      "                \"core_kwargs\": {},\n",
+      "                \"obs_randomizer_class\": null,\n",
+      "                \"obs_randomizer_kwargs\": {}\n",
+      "            },\n",
+      "            \"scan\": {\n",
+      "                \"core_class\": \"ScanCore\",\n",
+      "                \"core_kwargs\": {},\n",
+      "                \"obs_randomizer_class\": null,\n",
+      "                \"obs_randomizer_kwargs\": {}\n",
+      "            }\n",
+      "        }\n",
+      "    },\n",
+      "    \"meta\": {\n",
+      "        \"hp_base_config_file\": null,\n",
+      "        \"hp_keys\": [],\n",
+      "        \"hp_values\": []\n",
+      "    }\n",
+      "}\n",
+      "\n",
+      "============= Initialized Observation Utils with Obs Spec =============\n",
+      "\n",
+      "using obs modality: low_dim with keys: []\n",
+      "using obs modality: rgb with keys: ['observation']\n",
+      "using obs modality: depth with keys: []\n",
+      "using obs modality: scan with keys: []\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/duckie/miniconda3/envs/robomimic_venv/lib/python3.8/site-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
+      "  warnings.warn(\n",
+      "/home/duckie/miniconda3/envs/robomimic_venv/lib/python3.8/site-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=None`.\n",
+      "  warnings.warn(msg)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "============= Loaded Policy =============\n",
+      "ObservationKeyToModalityDict: action not found, adding action to mapping with assumed low_dim modality!\n",
+      "BC (\n",
+      "  ModuleDict(\n",
+      "    (policy): ActorNetwork(\n",
+      "        action_dim=2\n",
+      "  \n",
+      "        encoder=ObservationGroupEncoder(\n",
+      "            group=obs\n",
+      "            ObservationEncoder(\n",
+      "                Key(\n",
+      "                    name=observation\n",
+      "                    shape=[3, 480, 640]\n",
+      "                    modality=rgb\n",
+      "                    randomizer=None\n",
+      "                    net=VisualCore(\n",
+      "                      input_shape=[3, 480, 640]\n",
+      "                      output_shape=[64]\n",
+      "                      backbone_net=ResNet18Conv(input_channel=3, input_coord_conv=False)\n",
+      "                      pool_net=SpatialSoftmax(num_kp=32, temperature=1.0, noise=0.0)\n",
+      "                    )\n",
+      "                    sharing_from=None\n",
+      "                )\n",
+      "                output_shape=[64]\n",
+      "            )\n",
+      "            group=goal\n",
+      "            ObservationEncoder(\n",
+      "                Key(\n",
+      "                    name=observation\n",
+      "                    shape=[3, 480, 640]\n",
+      "                    modality=rgb\n",
+      "                    randomizer=None\n",
+      "                    net=VisualCore(\n",
+      "                      input_shape=[3, 480, 640]\n",
+      "                      output_shape=[64]\n",
+      "                      backbone_net=ResNet18Conv(input_channel=3, input_coord_conv=False)\n",
+      "                      pool_net=SpatialSoftmax(num_kp=32, temperature=1.0, noise=0.0)\n",
+      "                    )\n",
+      "                    sharing_from=None\n",
+      "                )\n",
+      "                output_shape=[64]\n",
+      "            )\n",
+      "        )\n",
+      "  \n",
+      "        mlp=MLP(\n",
+      "            input_dim=128\n",
+      "            output_dim=1024\n",
+      "            layer_dims=[1024]\n",
+      "            layer_func=Linear\n",
+      "            dropout=None\n",
+      "            act=ReLU\n",
+      "            output_act=ReLU\n",
+      "        )\n",
+      "  \n",
+      "        decoder=ObservationDecoder(\n",
+      "            Key(\n",
+      "                name=action\n",
+      "                shape=(2,)\n",
+      "                modality=low_dim\n",
+      "                net=(Linear(in_features=1024, out_features=2, bias=True))\n",
+      "            )\n",
+      "        )\n",
+      "    )\n",
+      "  )\n",
+      ")\n"
+     ]
+    }
+   ],
    "source": [
     "device = TorchUtils.get_torch_device(try_to_use_cuda=True)\n",
     "\n",
@@ -95,6 +415,37 @@
    "source": [
     "### Creating rollout envionment\n",
     "The policy checkpoint also contains sufficient information to recreate the environment that it's trained with. Again, you may manually create the environment."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "048f14a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obs_dict = {\"observation\": torch.tensor(np.random.random((1, 3, 480, 640)), dtype=torch.float32)}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "0bf5c61d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.0756, 0.0725]], grad_fn=<TanhBackward0>)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "policy.policy.get_action(obs_dict, obs_dict)"
    ]
   },
   {
@@ -133,7 +484,7 @@
     "    \"\"\"\n",
     "    Helper function to carry out rollouts. Supports on-screen rendering, off-screen rendering to a video, \n",
     "    and returns the rollout trajectory.\n",
-    "    Args:\n",
+    "    Args:policy.policy.get_action(obs_dict)\n",
     "        policy (instance of RolloutPolicy): policy loaded from a checkpoint\n",
     "        env (instance of EnvBase): env loaded from a checkpoint or demonstration metadata\n",
     "        horizon (int): maximum horizon for the rollout\n",
@@ -265,7 +616,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "robomimic_venv",
    "language": "python",
    "name": "python3"
   },
@@ -279,7 +630,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.20"
   }
  },
  "nbformat": 4,
